# jupyterlab_ext_pathbar

./: .copier-answers.yml  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
jupyterlab_ext_pathbar/: __init__.py
src/: index.ts
src/__tests__/: jupyterlab_ext_pathbar.spec.ts
src/widgets/: PathBar.ts
style/: base.css
ui-tests/: package.json  playwright.config.js
ui-tests/tests/: jupyterlab_ext_pathbar.spec.ts  pathbar.spec.ts
